--- a/index.html
+++ b/index.html
@@ -1,6 +1,40 @@
-<html> 
-<head>
-    <title>Oasis Aahmed</title>
-    <h1>  i am oasis </h1>
-</head>
+<!doctype html>
+<html>
+<body style="margin:auto;width:100%">
+    <h1 style="text-align: center">United International University</h1>
+    <br><br>
+    <table style="width:100%">
+        <caption style="padding:10px;margin-top: 100px;margin-left: -300px"><i><b>Academic Information</b></i></caption>
+    <tr>
+        <th>Name</th>
+        <td>A.S.M Sadekul Haque Oasis</td>
+        </tr>
+        <tr>
+        <th>Home District</th>
+            <td>Dhaka</td>
+        </tr>
+        <tr>
+        <th>School</th>
+            <td>B.A.F Shaheen College</td>
+        </tr>
+        <tr>
+        <th>SSC passing year</th>
+            <td>2016</td>
+        </tr>
+        <tr>
+        <th>college</th>
+            <td>B.A.F Shaheen College</td>
+        </tr>
+        <tr>
+        <th>College passing year</th>
+            <td>2018</td>
+        </tr>
+        <th>School Link</th>
+        <td><a href ="https://www.bafsd.edu.bd/">B.A.F Shaheen College</a></td>
+        <tr>
+        <th>College Link(facebook)</th>
+        <td><a href = "https://www.bafsd.edu.bd/">B.A.F Shaheen College</a></td>
+        </tr>
+    </table>
+    </body>
 </html>
