--- a/hobbies2.html
+++ b/hobbies2.html
@@ -2,6 +2,8 @@
 <html>
 <body>
     <h1 style = "text-align: center">United International University</h1>
+    <br><br>
+    <a href = "https://www.oasisaahmed.github.io/index.html>
     
     <p style="margin-top:100px;margin-left: 150px"><b>HOBBIES</b></p>
     <br><br>
