--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         <td><a href = "https://www.bafsd.edu.bd/">B.A.F Shaheen College</a></td>
         </tr>
     </table>
-    <a href = "https://www.oasisaahmed.github.io/hobbies2.html>HOBBIES</a>
+    <a href = "https://oasisaahmed.github.io/hobbies2.html>HOBBIES</a>
     </body>
 </html>
