--- a/hobbies2.html
+++ b/hobbies2.html
@@ -26,5 +26,7 @@
     <img src="cric.jpg" width="100px"><p><em>Cricket</em></p>
     <img src="foot.jpg" width="100px"><p><em>Football</em></p>
     
+    <a href = "https://oasisaahmed.github.io/index.html">Academic Information</a>
+    
     </body>
 </html>
