--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
         </tr>
     </table>
     
+    <a href = "https://oasisaahmed.github.io/hobbies2.html">HOBBIES</a>
+    
     </body>
 </html>
