--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <th>School Link</th>
         <td><a href ="https://www.bafsd.edu.bd/">B.A.F Shaheen College</a></td>
         <tr>
-        <th>College Link(facebook)</th>
+        <th>College Link</th>
         <td><a href = "https://www.bafsd.edu.bd/">B.A.F Shaheen College</a></td>
         </tr>
     </table>
